# Polyglot-Chess-Game

./: README.md  README_template.md  Vagrantfile  cmpt383.md
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  box_meta  chef_node_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
cookbooks/polyglot/recipes/: default.rb
hello-world/: Cargo.toml  Hello.java  hello.c  hello.cpp  hello.erl  hello.go  hello.hs  hello.js  hello.ml  hello.php  hello.py  hello.rb  hello.scala
hello-world/hello/: Program.cs
hello-world/src/: hello.rs
mq-demos/: .gitignore  Cargo.toml  amqp_client.go  amqp_client.py  amqp_client.rb  amqp_server.go  amqp_server.py  amqp_server.rb  pom.xml  zmq_reply.js  zmq_reply.py  zmq_reply.rb  zmq_request.go  zmq_request.js  zmq_request.py  zmq_request.rb
mq-demos/src/: zmq_reply.rs  zmq_request.rs
mq-demos/src/main/java/demo/: AmqpClient.java  AmqpServer.java
project/: Makefile  a.out  engine.cpp  game_logic.py  server.py  setup.py  test.py
project/static/: chessboard.js  index.html
project/static/chessboardLibrary/js/: chessboard-1.0.0.js  test.js
swig-demo/: README.md  example.c  example.h  example.i  fact.py  mandel.py
