[package]
name = "hello"
version = "0.1.0"
authors = ["Greg Baker <ggbaker@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "zmq_reply"
path = "src/zmq_reply.rs"
