[package]
name = "demo"
version = "0.1.0"
authors = ["Greg Baker <ggbaker@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
json = "0.12.4"


[[bin]]
name = "zmq_request"
path = "src/zmq_request.rs"

[[bin]]
name = "zmq_reply"
path = "src/zmq_reply.rs"
